--- a/src/main/resources/templates/index.peb.html
+++ b/src/main/resources/templates/index.peb.html
@@ -3,11 +3,12 @@
 {% include "fragments/head" %}
 
 <body class="d-flex flex-column min-vh-100">
+{% include "fragments/navbar" %}
 
 <div class="container mb-5">
 
     <!-- Lista de alumnos -->
-    <h1 class="my-4 text-center text-white">Lista de Alumnos</h1>
+    <h1 class="mt-5 my-4 text-center fw-bold text-black">Lista de Alumnos</h1>
     {% if page is empty %}
     <div class="alert alert-info text-center">
         <i class="bi bi-info-circle"></i> No hay alumnos registrados.
