Actualizar estilos y dependencias.

--- a/src/main/resources/templates/fragments/head.peb.html
+++ b/src/main/resources/templates/fragments/head.peb.html
@@ -22,7 +22,7 @@
     <!-- Estilos adicionales -->
     <style>
         body {
-            background: url(/images/gohan.webp) no-repeat center center fixed;
+            background: url(/images/aaa.jpg) no-repeat center center fixed;
             background-size: cover;
         }
     </style>
