--- a/src/main/resources/templates/fragments/navbar.peb.html
+++ b/src/main/resources/templates/fragments/navbar.peb.html
@@ -47,7 +47,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/auth/login">
-                        <i class="bi bi-person"></i> {{ message('nav.login') }}
+                        <i class="bi bi-person-arms-up "></i> {{ message('nav.login') }}
                     </a>
                 </li>
             </ul>
