--- a/src/main/resources/templates/alumnos/alumnoDetalle.peb.html
+++ b/src/main/resources/templates/alumnos/alumnoDetalle.peb.html
@@ -5,7 +5,7 @@
 <body class="d-flex flex-column min-vh-100">
 {% include "fragments/navbar" %}
 
-<div class="container mb-5">
+<div class="container mb-5 mt-5">
 
     <!-- Lista de Alumnos -->
     {% if alumno is empty %}
