--- a/src/main/resources/templates/index.peb.html
+++ b/src/main/resources/templates/index.peb.html
@@ -14,7 +14,7 @@
         <i class="bi bi-info-circle"></i> No hay alumnos registrados.
     </div>
     {% else %}
-    <table class="table table-striped">
+    <table class="table table-bordered">
         <tr>
             <th>ID</th>
             <th>Nombre</th>
