Añadir funcionalidades para editar y actualizar alumnos.

--- a/src/main/resources/templates/index.peb.html
+++ b/src/main/resources/templates/index.peb.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-{% include "fragments/head" %}
+{% extends "fragments/layout" %}
 
-<body class="d-flex flex-column min-vh-100">
-{% include "fragments/navbar" %}
-
-<div class="container mb-5">
-
+{% block body %}
     <!-- Lista de alumnos -->
     <h1 class="mt-5 my-4 text-center fw-bold text-black">Lista de Alumnos</h1>
     {% if page is empty %}
@@ -97,12 +91,4 @@
     {% endif %}
 
     {% endif %}
-</div>
-
-{% include "fragments/footer" %}
-
-<!-- Bootstrap 5.3 JS Bundle with Popper -->
-<script src="/webjars/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
+{% endblock %}
