--- a/src/main/resources/templates/alumnos/detalle.peb.html
+++ b/src/main/resources/templates/alumnos/detalle.peb.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html lang="es">
-{% include "fragments/head" %}
+{% extends "fragments/layout" %}
 
-<body class="d-flex flex-column min-vh-100">
-{% include "fragments/navbar" %}
-
-<div class="container mb-5 mt-5">
+{% block body %}
 
     <!-- Lista de Alumnos -->
     {% if alumno is empty %}
-    <div class="alert alert-info text-center">
+    <div class="mt-5 alert alert-info text-center">
         <i class="bi bi-info-circle"></i> {{ message('label.alumno.empty') }}
     </div>
     {% else %}
-    <h3> Detalle del alumno {{ alumno.id }}</h3>
+    <h3 class="mt-5"> Detalle del alumno {{ alumno.id }}</h3>
     <ul>
         <li> {{ message('label.alumno.nombre') }}: {{ alumno.nombre }}</li>
         <li> {{ message('label.alumno.apellido') }}: {{ alumno.apellido }}</li>
@@ -21,11 +16,5 @@
         <li> {{ message('label.alumno.asignatura') }}: {{ alumno.asignatura }}</li>
     </ul>
     {% endif %}
-</div>
 
-{% include "fragments/footer" %}
-
-<!-- Bootstrap 5.3 JS Bundle with Popper -->
-<script src="/webjars/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
+{% endblock %}
