--- a/src/main/resources/templates/fragments/navbar.peb.html
+++ b/src/main/resources/templates/fragments/navbar.peb.html
@@ -11,7 +11,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/public"><i class="bi bi-house-door"></i> {{ message('nav.home') }}</a>
+                    <a class="nav-link active" href="/public">
+                        <i class="bi bi-house-door"></i> {{ message('nav.home') }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/alumnos/new">
+                        <i class="bi bi-credit-card-fill"></i> {{ message('nav.new.alumnos') }}</a>
                 </li>
             </ul>
 
