--- a/src/main/resources/templates/alumnos/lista.peb.html
+++ b/src/main/resources/templates/alumnos/lista.peb.html
@@ -14,7 +14,7 @@
         <th>Nombre</th>
         <th>Apellido</th>
         <th>Grado</th>
-        <th>Operaciones</th>
+        <th>Acciones</th>
     </tr>
     {% for alumno in page.content %}
     <tr>
@@ -22,7 +22,11 @@
         <td>{{ alumno.nombre }} </td>
         <td>{{ alumno.apellido }}</td>
         <td>{{ alumno.grado }}</td>
-        <td><a href="/alumnos/{{ alumno.id }}">Ver detalle</a></td>
+        <td>
+            <a href="/alumnos/{{ alumno.id }}">Ver detalle</a>
+            <a href="/alumnos/{{ alumno.id }}/edit"><i class="bi bi-pencil"></i></a>
+            <a href="/alumnos/{{ alumno.id }}/delete"><i class="bi bi-trash"></i></a>
+        </td>
     </tr>
     {% endfor %}
 </table>
