--- a/src/main/resources/templates/fragments/navbar.peb.html
+++ b/src/main/resources/templates/fragments/navbar.peb.html
@@ -56,7 +56,7 @@
             <i class="bi bi-person-circle"></i> {{ username | default('Usuario') }}
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><h6 class="dropdown-header">{{ userRole | default('USER') }}</h6></li>
+            <li><h6 class="dropdown-header">{{ userRoles | default('USER') }}</h6></li>
             <li>
               <hr class="dropdown-divider">
             </li>
