--- a/src/main/resources/templates/login.peb.html
+++ b/src/main/resources/templates/login.peb.html
@@ -14,11 +14,11 @@
           <form action="/auth/login-post" id="loginform" method="POST">
             <input name="{{ csrfParamName }}" type="hidden" value="{{ csrfToken }}">
             <div class="mb-3">
-              <label class="form-label" for="username">{{ message('auth.email') }}</label>
+              <label class="form-label" for="username">{{ message('auth.username') }}</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person"></i></span>
                 <input class="form-control" id="login-username" name="username"
-                       placeholder="{{ message('auth.email') }}"
+                       placeholder="{{ message('auth.username') }}"
                        required type="text">
               </div>
             </div>
