--- a/src/main/resources/templates/admin/alumnos/lista.peb.html
+++ b/src/main/resources/templates/admin/alumnos/lista.peb.html
@@ -23,9 +23,9 @@
     <td>{{ alumno.apellido }}</td>
     <td>{{ alumno.grado }}</td>
     <td>
-      <a href="/alumnos/{{ alumno.id }}">Ver detalle</a>
-      <a href="/alumnos/{{ alumno.id }}/edit"><i class="bi bi-pencil"></i></a>
-      <a href="/alumnos/{{ alumno.id }}/delete"><i class="bi bi-trash"></i></a>
+      <a href="/admin/alumnos/{{ alumno.id }}">Ver detalle</a>
+      <a href="/admin/alumnos/{{ alumno.id }}/edit"><i class="bi bi-pencil"></i></a>
+      <a href="/admin/alumnos/{{ alumno.id }}/delete"><i class="bi bi-trash"></i></a>
     </td>
   </tr>
   {% endfor %}
