--- a/src/main/resources/templates/error.peb.html
+++ b/src/main/resources/templates/error.peb.html
@@ -1,7 +1,7 @@
 {% extends "fragments/layout" %}
 
 {% block body %}
-<h2>Something happened...</h2>
+<h2 class="mt-5">Something happened...</h2>
 
 <!-- Status-specific error message -->
 <p>
