--- a/src/main/resources/templates/login.peb.html
+++ b/src/main/resources/templates/login.peb.html
@@ -14,7 +14,7 @@
           <form action="/auth/login-post" id="loginform" method="POST">
             <input name="{{ csrfParamName }}" type="hidden" value="{{ csrfToken }}">
             <div class="mb-3">
-              <label class="form-label" for="username">{{ message('auth.username') }}</label>
+              <label class="form-label" for="login-username">{{ message('auth.username') }}</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person"></i></span>
                 <input class="form-control" id="login-username" name="username"
@@ -24,7 +24,7 @@
             </div>
 
             <div class="mb-3">
-              <label class="form-label" for="password">{{ message('auth.password') }}</label>
+              <label class="form-label" for="login-password">{{ message('auth.password') }}</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-lock"></i></span>
                 <input class="form-control" id="login-password" name="password"
