--- a/src/main/resources/templates/admin/alumnos/detalle.peb.html
+++ b/src/main/resources/templates/admin/alumnos/detalle.peb.html
@@ -2,13 +2,30 @@
 
 {% block body %}
 
-<!-- Lista de Alumnos -->
+<div class="row">
+  <div class="col-12">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h1>
+        <i class="bi bi-credit-card-2-front"></i> {{ message('label.tarjeta.detalle') }} {{ tarjeta.id }}
+      </h1>
+      <a href="/admin/tarjetas" class="btn btn-secondary">
+        <i class="bi bi-arrow-left"></i> Volver
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
+    {% include "fragments/messages" %}
+  </div>
+</div>
+
 {% if alumno is empty %}
 <div class="mt-5 alert alert-info text-center">
   <i class="bi bi-info-circle"></i> {{ message('label.alumno.empty') }}
 </div>
 {% else %}
-<h3 class="mt-5"> Detalle del alumno {{ alumno.id }}</h3>
 <ul>
   <li> {{ message('label.alumno.nombre') }}: {{ alumno.nombre }}</li>
   <li> {{ message('label.alumno.apellido') }}: {{ alumno.apellido }}</li>
