--- a/src/main/resources/templates/fragments/navbar.peb.html
+++ b/src/main/resources/templates/fragments/navbar.peb.html
@@ -71,7 +71,7 @@
               <hr class="dropdown-divider">
             </li>
             <li>
-              <a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()">
+              <a class="dropdown-item" id="logoutLink">
                 <i class="bi bi-box-arrow-right"></i> {{ message('nav.logout') }}
               </a>
             </li>
