Añadir funcionalidad de filtrado de alumnos y controlador de errores personalizado.

--- a/src/main/resources/templates/fragments/navbar.peb.html
+++ b/src/main/resources/templates/fragments/navbar.peb.html
@@ -22,10 +22,8 @@
         {% endif %}
       </ul>
 
-      <form action="/public" class="d-flex me-3" method="get" role="search">
-        <input class="form-control" name="q" placeholder="{{ message('alumnos.search') }}" type="search"
-               value="{{ q | default('') }}">
-        <button class="btn btn-outline-light ms-2" type="submit"><i class="bi bi-search"></i></button>
+      <form action="#" class="d-flex me-3" method="get" role="search">
+        <input class="form-control" name="q" placeholder="{{ message('alumnos.search') }}" type="search" id="buscador" name="titulo">
       </form>
 
       <ul class="navbar-nav">
