--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,5 @@
 /* Estilos adicionales aparte de los de Boostrap */
 body {
-    background: url(/static/images/aaa.jpg) no-repeat center center fixed;
+    background: url(/images/aaa.jpg) no-repeat center center fixed;
     background-size: cover;
 }
