--- a/src/main/resources/templates/fragments/listaAlumnos.peb.html
+++ b/src/main/resources/templates/fragments/listaAlumnos.peb.html
@@ -18,6 +18,8 @@
     <td>{{ alumno.nombre }}</td>
     <td>{{ alumno.apellido }}</td>
     <td>{{ alumno.grado }}</td>
+    <!-- Si tuviera fechas -->
+    <!-- <td>{{ tarjeta.fechaCaducidad  | formatDate }}</td> -->
     <td>
       <a href="/admin/alumnos/{{ alumno.id }}"><i class="bi bi-eye"></i></a>
       <a href="/admin/alumnos/{{ alumno.id }}/edit"><i class="bi bi-pencil"></i></a>
